fixed padding on mobile UI. changed trip-planner picture. added resume download link. added smooth scrolling to bottom and top of page

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,22 @@ body > * {
   line-height: 1.6em;
 }
 
+.top-anchor {
+  text-decoration: none;
+  color: lightslategray;
+  font-family: 'Raleway', sans-serif;
+}
+
+.top-anchor:visisted {
+  text-decoration: none;
+}
+
+.top-anchor:hover {
+  background-size: 1px 1em;
+  box-shadow: inset 0 -2px rgb(245, 190, 98, 0.9);
+  display: inline;
+}
+
 /* ================================PROJECTS */
 
 .projects-container {
@@ -127,7 +143,7 @@ body > * {
 
 .projects-image {
   margin: 1em 0 1em 0;
-  width: 90%;
+  width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
@@ -175,10 +191,32 @@ body > * {
   padding-top: 4em;
 }
 
+.bottom-anchor-container {
+  text-align: right;
+  font-family: 'Raleway', sans-serif;
+  color: lightslategray;
+}
+
+#back-top {
+  text-decoration: none;
+}
+
+#back-top:visited {
+  text-decoration: none;
+  color: lightslategray;
+}
+
+#back-top:hover {
+  background-size: 1px 1em;
+  box-shadow: inset 0 -2px rgb(245, 190, 98, 0.9);
+  display: inline;
+}
+
 .contact-title {
   color: lightslategray;
   font-family: 'Archivo Black', serif;
   font-size: 4em;
+  margin-bottom: 20px;
 }
 
 .media-list {
@@ -187,6 +225,22 @@ body > * {
 
 .email {
   font-size: 1.5em;
+}
+
+.resume {
+  font-size: 1.5em;
+  text-decoration: none;
+}
+
+.resume:visited {
+  text-decoration: inherit;
+  color: inherit;
+}
+
+.resume:hover {
+  background-size: 1px 1em;
+  box-shadow: inset 0 -3px rgb(245, 190, 98, 0.9);
+  display: inline;
 }
 
 .media-list > li {
@@ -212,8 +266,9 @@ body > * {
 @media only screen and (max-width: 520px) {
 
   body > * {
-    padding: 5em 5% 5em 5%;
+    padding: 5em 4% 5em 4%;
     min-width: 20em;
+    width: 100%;
   }
 
   /* .svg-container {
@@ -239,7 +294,7 @@ body > * {
   /* ================================HEADER */
 
   .header-title {
-    font-size: 6em;
+    font-size: 5em;
   }
 
   .header-intro {
